--- a/Home.html
+++ b/Home.html
@@ -1,8 +1,8 @@
 <div style="text-align:center;margin-top: 20px;"><img src="LOGO.png"></div>
 
 <div style="text-align:center;margin-top: 10px;">
-<a style="margin-right: 20px;"href="Index.html">Home</a>
-<a style="margin-right: 20px;"href="About.html">About</a>
+<a style="margin-right: 20px;"href="index.html">Home</a>
+<a style="margin-right: 20px;"href="about.html">About</a>
 <a style="margin-right: 20px;"href="">Services</a>
 </div>
 
