--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <div style="text-align:center;margin-top: 10px;">
 <a style="margin-right: 20px;"href="home.html">Home</a>
-<a style="margin-right: 20px;"href="About.html">About</a>
+<a style="margin-right: 20px;"href="about.html">About</a>
 <a style="margin-right: 20px;"href="">Services</a>
 </div>
 
